Gama.Preprocess/GamaPreprocessorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from GamaPreprocessor.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class GamaPreprocessorParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, Hash=4, PreInclude=5, PreDefine=6, PreUndef=7, 
		PreSet=8, PreIf=9, PreIfDef=10, PreIfndef=11, PreElse=12, PreEndif=13, 
		PrePragmna=14, Warning=15, Disable=16, Restore=17, Once=18, LT=19, GT=20, 
		LE=21, GE=22, EQ=23, NE=24, OpComparison=25, SC=26, ADD=27, NEG=28, MUL=29, 
		DIV=30, NullLiteral=31, StringLiteral=32, CharLiteral=33, BooleanLiteral=34, 
		FloatingLiteral=35, IntegerLiteral=36, MultiComment=37, LineComment=38, 
		WhiteSpace=39, Symbol=40, NonNewlineString=41, NonNewlineChar=42, NumericLiteral=43, 
		PreIfdef=44, PrePragma=45, PreWarning=46, PreError=47;
	public const int
		RULE_program = 0, RULE_preStatement = 1, RULE_preInclude = 2, RULE_symbolList = 3, 
		RULE_preDefine = 4, RULE_preSet = 5, RULE_preUndef = 6, RULE_preIf = 7, 
		RULE_preIfdef = 8, RULE_preIfndef = 9, RULE_prePragma = 10, RULE_preWarning = 11, 
		RULE_preError = 12, RULE_src = 13;
	public static readonly string[] ruleNames = {
		"program", "preStatement", "preInclude", "symbolList", "preDefine", "preSet", 
		"preUndef", "preIf", "preIfdef", "preIfndef", "prePragma", "preWarning", 
		"preError", "src"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'('", "')'", "'#'", null, null, null, null, null, null, 
		null, null, null, null, "'warning'", "'disable'", "'restore'", "'once'", 
		"'<'", "'>'", "'<='", "'>='", "'=='", "'!='", null, "';'", "'+'", "'-'", 
		"'*'", "'/'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "Hash", "PreInclude", "PreDefine", "PreUndef", 
		"PreSet", "PreIf", "PreIfDef", "PreIfndef", "PreElse", "PreEndif", "PrePragmna", 
		"Warning", "Disable", "Restore", "Once", "LT", "GT", "LE", "GE", "EQ", 
		"NE", "OpComparison", "SC", "ADD", "NEG", "MUL", "DIV", "NullLiteral", 
		"StringLiteral", "CharLiteral", "BooleanLiteral", "FloatingLiteral", "IntegerLiteral", 
		"MultiComment", "LineComment", "WhiteSpace", "Symbol", "NonNewlineString", 
		"NonNewlineChar", "NumericLiteral", "PreIfdef", "PrePragma", "PreWarning", 
		"PreError"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GamaPreprocessor.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GamaPreprocessorParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GamaPreprocessorParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GamaPreprocessorParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GamaPreprocessorParser.Eof, 0); }
		public PreStatementContext[] preStatement() {
			return GetRuleContexts<PreStatementContext>();
		}
		public PreStatementContext preStatement(int i) {
			return GetRuleContext<PreStatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PreInclude) | (1L << PreDefine) | (1L << PreUndef) | (1L << PreIf) | (1L << PreIfndef) | (1L << PreIfdef) | (1L << PrePragma) | (1L << PreWarning) | (1L << PreError))) != 0)) {
				{
				{
				State = 28; preStatement();
				}
				}
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 34; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreStatementContext : ParserRuleContext {
		public PreStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preStatement; } }
	 
		public PreStatementContext() { }
		public virtual void CopyFrom(PreStatementContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PreprocessorIfContext : PreStatementContext {
		public PreIfContext preIf() {
			return GetRuleContext<PreIfContext>(0);
		}
		public PreprocessorIfContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorIf(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorIf(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorIf(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorDefineStmtContext : PreStatementContext {
		public PreDefineContext preDefine() {
			return GetRuleContext<PreDefineContext>(0);
		}
		public PreprocessorDefineStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorDefineStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorDefineStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorDefineStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorUndefStmtContext : PreStatementContext {
		public PreUndefContext preUndef() {
			return GetRuleContext<PreUndefContext>(0);
		}
		public PreprocessorUndefStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorUndefStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorUndefStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorUndefStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorIfndefStmtContext : PreStatementContext {
		public PreIfndefContext preIfndef() {
			return GetRuleContext<PreIfndefContext>(0);
		}
		public PreprocessorIfndefStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorIfndefStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorIfndefStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorIfndefStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorIfdefStmtContext : PreStatementContext {
		public PreIfdefContext preIfdef() {
			return GetRuleContext<PreIfdefContext>(0);
		}
		public PreprocessorIfdefStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorIfdefStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorIfdefStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorIfdefStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorErrorContext : PreStatementContext {
		public PreErrorContext preError() {
			return GetRuleContext<PreErrorContext>(0);
		}
		public PreprocessorErrorContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorError(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorError(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorError(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorWarningContext : PreStatementContext {
		public PreWarningContext preWarning() {
			return GetRuleContext<PreWarningContext>(0);
		}
		public PreprocessorWarningContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorWarning(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorWarning(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorWarning(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorPragmaStmtContext : PreStatementContext {
		public PrePragmaContext prePragma() {
			return GetRuleContext<PrePragmaContext>(0);
		}
		public PreprocessorPragmaStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorPragmaStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorPragmaStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorPragmaStmt(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PreprocessorIncludeStmtContext : PreStatementContext {
		public PreIncludeContext preInclude() {
			return GetRuleContext<PreIncludeContext>(0);
		}
		public PreprocessorIncludeStmtContext(PreStatementContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreprocessorIncludeStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreprocessorIncludeStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreprocessorIncludeStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreStatementContext preStatement() {
		PreStatementContext _localctx = new PreStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_preStatement);
		try {
			State = 45;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PreInclude:
				_localctx = new PreprocessorIncludeStmtContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 36; preInclude();
				}
				break;
			case PreDefine:
				_localctx = new PreprocessorDefineStmtContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 37; preDefine();
				}
				break;
			case PreUndef:
				_localctx = new PreprocessorUndefStmtContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 38; preUndef();
				}
				break;
			case PreIf:
				_localctx = new PreprocessorIfContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 39; preIf();
				}
				break;
			case PreIfdef:
				_localctx = new PreprocessorIfdefStmtContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 40; preIfdef();
				}
				break;
			case PreIfndef:
				_localctx = new PreprocessorIfndefStmtContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 41; preIfndef();
				}
				break;
			case PrePragma:
				_localctx = new PreprocessorPragmaStmtContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 42; prePragma();
				}
				break;
			case PreWarning:
				_localctx = new PreprocessorWarningContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 43; preWarning();
				}
				break;
			case PreError:
				_localctx = new PreprocessorErrorContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 44; preError();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreIncludeContext : ParserRuleContext {
		public ITerminalNode PreInclude() { return GetToken(GamaPreprocessorParser.PreInclude, 0); }
		public ITerminalNode StringLiteral() { return GetToken(GamaPreprocessorParser.StringLiteral, 0); }
		public PreIncludeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preInclude; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterPreInclude(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitPreInclude(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPreInclude(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreIncludeContext preInclude() {
		PreIncludeContext _localctx = new PreIncludeContext(Context, State);
		EnterRule(_localctx, 4, RULE_preInclude);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(PreInclude);
			State = 48; Match(StringLiteral);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbolListContext : ParserRuleContext {
		public ITerminalNode[] Symbol() { return GetTokens(GamaPreprocessorParser.Symbol); }
		public ITerminalNode Symbol(int i) {
			return GetToken(GamaPreprocessorParser.Symbol, i);
		}
		public SymbolListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbolList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterSymbolList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitSymbolList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbolList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbolListContext symbolList() {
		SymbolListContext _localctx = new SymbolListContext(Context, State);
		EnterRule(_localctx, 6, RULE_symbolList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(Symbol);
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 51; Match(T__0);
				State = 52; Match(Symbol);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PreDefineContext : ParserRuleContext {
		public PreDefineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_preDefine; } }
	 
		public PreDefineContext() { }
		public virtual void CopyFrom(PreDefineContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StmtPreDefineMacroContext : PreDefineContext {
		public ITerminalNode PreDefine() { return GetToken(GamaPreprocessorParser.PreDefine, 0); }
		public ITerminalNode Symbol() { return GetToken(GamaPreprocessorParser.Symbol, 0); }
		public ITerminalNode NonNewlineString() { return GetToken(GamaPreprocessorParser.NonNewlineString, 0); }
		public SymbolListContext symbolList() {
			return GetRuleContext<SymbolListContext>(0);
		}
		public StmtPreDefineMacroContext(PreDefineContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterStmtPreDefineMacro(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitStmtPreDefineMacro(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtPreDefineMacro(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtPreDefineAbsoluteContext : PreDefineContext {
		public ITerminalNode PreDefine() { return GetToken(GamaPreprocessorParser.PreDefine, 0); }
		public ITerminalNode Symbol() { return GetToken(GamaPreprocessorParser.Symbol, 0); }
		public ITerminalNode NonNewlineString() { return GetToken(GamaPreprocessorParser.NonNewlineString, 0); }
		public StmtPreDefineAbsoluteContext(PreDefineContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterStmtPreDefineAbsolute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitStmtPreDefineAbsolute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtPreDefineAbsolute(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StmtPreDefineBoolContext : PreDefineContext {
		public ITerminalNode PreDefine() { return GetToken(GamaPreprocessorParser.PreDefine, 0); }
		public ITerminalNode Symbol() { return GetToken(GamaPreprocessorParser.Symbol, 0); }
		public StmtPreDefineBoolContext(PreDefineContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.EnterStmtPreDefineBool(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGamaPreprocessorListener typedListener = listener as IGamaPreprocessorListener;
			if (typedListener != null) typedListener.ExitStmtPreDefineBool(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGamaPreprocessorVisitor<TResult> typedVisitor = visitor as IGamaPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtPreDefineBool(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PreDefineContext preDefine() {
		PreDefineContext _localctx = new PreDefineContext(Context, State);
		EnterRule(_localctx, 8, RULE_preDefine);
		int _la;
		try {
			State = 71;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				_localctx = new StmtPreDefineBoolContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; Match(PreDefine);
				State = 59; Match(Symbol);
				}
				break;
			case 2:
				_localctx = new StmtPreDefineAbsoluteContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; Match(PreDefine);
				State = 61; Match(Symbol);
				State = 62; Match(NonNewlineString);
				}
				break;
			case 3:
				_localctx = new StmtPreDefineMacroContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 63; Match(PreDefine);
				State = 64; Match(Symbol);
				State = 65; Match(T__1);
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==Symbol) {
					{
					State = 66; symbolList();
					}
				}

				State = 69; Match(T__2);
				State = 70; Match(NonNewlineString);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
